feat: 简化demo、添加.vscode/settings.josn文件

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <section class="content-wrapper">
-      <div class="content">
+      <!--  <div class="content">
         <div class="img-table container">
           <div id="config-wrapper" class="config-table">
             <h4>Images</h4>
@@ -118,14 +118,14 @@
                 <option value="Cloudimage">CloudImage</option>
               </select>
             </div>
-          </div>
-          <div class="editor-container" id="editor_container">
-            <div class="plugin-spinner"></div>
-          </div>
-        </div>
+          </div> -->
+      <div class="editor-container" id="editor_container">
+        <div class="plugin-spinner"></div>
+      </div>
+      <!-- </div>
         <div class="blue-blur-ellipse"></div>
         <div class="cyan-blur-ellipse"></div>
-      </div>
+      </div>-->
     </section>
 
     <script type="module" src="./public/init.js"></script>
